project_saphDemo/run.log

Clobbering all generated files...
(For large projects, this task may take a long time to complete)



Test 'test_Things.c'
--------------------
Generating runner for test_Things.c...
Compiling test_Things_runner.c...
build/test/runners/test_Things_runner.c:25:0: warning: "UNITY_INCLUDE_CONFIG_H" redefined
 #define UNITY_INCLUDE_CONFIG_H
 ^
<command-line>:0:0: note: this is the location of the previous definition
Compiling test_Things.c...
In file included from /home/saphieron/git/avr-ceedling-example/project_saphDemo/vendor/ceedling/vendor/unity/src/unity.h:16:0,
                 from test/test_Things.c:1:
test/test_Things.c: In function ‘test_something’:
/home/saphieron/git/avr-ceedling-example/project_saphDemo/vendor/ceedling/vendor/unity/src/unity.h:102:163: error: ‘NULL’ undeclared (first use in this function)
 #define TEST_ASSERT_EQUAL_UINT8(expected, actual)                                                  UNITY_TEST_ASSERT_EQUAL_UINT8( (expected), (actual), __LINE__, NULL)
                                                                                                                                                                   ^
/home/saphieron/git/avr-ceedling-example/project_saphDemo/vendor/ceedling/vendor/unity/src/unity_internals.h:647:194: note: in definition of macro ‘UNITY_TEST_ASSERT_EQUAL_UINT8’
 #define UNITY_TEST_ASSERT_EQUAL_UINT8(expected, actual, line, message)                           UnityAssertEqualNumber((UNITY_INT)(UNITY_UINT8 )(expected), (UNITY_INT)(UNITY_UINT8 )(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_UINT8)
                                                                                                                                                                                                  ^
test/test_Things.c:5:2: note: in expansion of macro ‘TEST_ASSERT_EQUAL_UINT8’
  TEST_ASSERT_EQUAL_UINT8(40, 30);
  ^
/home/saphieron/git/avr-ceedling-example/project_saphDemo/vendor/ceedling/vendor/unity/src/unity.h:102:163: note: each undeclared identifier is reported only once for each function it appears in
 #define TEST_ASSERT_EQUAL_UINT8(expected, actual)                                                  UNITY_TEST_ASSERT_EQUAL_UINT8( (expected), (actual), __LINE__, NULL)
                                                                                                                                                                   ^
/home/saphieron/git/avr-ceedling-example/project_saphDemo/vendor/ceedling/vendor/unity/src/unity_internals.h:647:194: note: in definition of macro ‘UNITY_TEST_ASSERT_EQUAL_UINT8’
 #define UNITY_TEST_ASSERT_EQUAL_UINT8(expected, actual, line, message)                           UnityAssertEqualNumber((UNITY_INT)(UNITY_UINT8 )(expected), (UNITY_INT)(UNITY_UINT8 )(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_UINT8)
                                                                                                                                                                                                  ^
test/test_Things.c:5:2: note: in expansion of macro ‘TEST_ASSERT_EQUAL_UINT8’
  TEST_ASSERT_EQUAL_UINT8(40, 30);
  ^
ERROR: Shell command failed.
> Shell executed command:
'avr-gcc -c test/test_Things.c -o build/test/out/test_Things.o -DF_CPU=16000000UL -mmcu=atmega2560 -I"test" -I"test/support" -I"src" -I"/home/saphieron/git/avr-ceedling-example/project_saphDemo/vendor/ceedling/vendor/unity/src" -I"/home/saphieron/git/avr-ceedling-example/project_saphDemo/vendor/ceedling/vendor/cmock/src" -I"build/test/mocks" -DTEST -DUNITY_INCLUDE_CONFIG_H -Wall -Os'
> And exited with status: [1].

rake aborted!
ShellExecutionException: ShellExecutionException
/home/saphieron/git/avr-ceedling-example/project_saphDemo/vendor/ceedling/lib/ceedling/tool_executor.rb:78:in `exec'
/home/saphieron/git/avr-ceedling-example/project_saphDemo/vendor/ceedling/lib/ceedling/generator.rb:95:in `generate_object_file'
/home/saphieron/git/avr-ceedling-example/project_saphDemo/vendor/ceedling/lib/ceedling/rules_tests.rake:17:in `block in <top (required)>'
/home/saphieron/git/avr-ceedling-example/project_saphDemo/vendor/ceedling/lib/ceedling/task_invoker.rb:74:in `invoke_test_results'
/home/saphieron/git/avr-ceedling-example/project_saphDemo/vendor/ceedling/lib/ceedling/test_invoker.rb:104:in `block in setup_and_invoke'
/home/saphieron/git/avr-ceedling-example/project_saphDemo/vendor/ceedling/lib/ceedling/test_invoker.rb:63:in `setup_and_invoke'
/home/saphieron/git/avr-ceedling-example/project_saphDemo/vendor/ceedling/lib/ceedling/tasks_tests.rake:11:in `block (2 levels) in <top (required)>'
/var/lib/gems/2.3.0/gems/ceedling-0.28.2/bin/ceedling:287:in `block in <top (required)>'
/var/lib/gems/2.3.0/gems/ceedling-0.28.2/bin/ceedling:274:in `<top (required)>'
/usr/local/bin/ceedling:23:in `load'
/usr/local/bin/ceedling:23:in `<main>'
Tasks: TOP => build/test/results/test_Things.pass => build/test/out/test_Things.hex => build/test/out/test_Things.o
(See full trace by running task with --trace)
ERROR: Ceedling Failed
